# tree-sitter-amble

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-amble.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_amble/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAmble/: amble.h
bindings/swift/TreeSitterAmbleTests/: TreeSitterAmbleTests.swift
fixtures/: basic_room.amble  npc_spawns.amble  room_cond_exit.amble  room_overlay_sets.amble  room_overlays.amble  test_grammar_update.amble  test_modify_npc.amble  trigger_action_block.amble  trigger_basic.amble  trigger_when_conds.amble
pest_grammar/: grammar.pest
queries/: brackets.scm  highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c
