[package]
name = "tree-sitter-amble"
description = "DSL for the Amble game engine."
version = "0.12.0"
authors = ["djvb <djvbmd@protonmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "amble"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/pygmy-twylyte/tree-sitter-amble.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.9"
